--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -3,6 +3,8 @@
       package="uk.org.dretzq.nagdroid"
       android:versionCode="1"
       android:versionName="1.0">
+    <uses-permission android:name="android.permission.INTERNET" />
+      
     <application android:icon="@drawable/icon" android:label="@string/app_name">
         <activity android:name=".StatusActivity"
                   android:label="@string/app_name">
