--- a/AndroidManifest.xml
+++ b/AndroidManifest.xml
@@ -13,6 +13,11 @@
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
+        <activity android:name=".SettingsActivity" android:label="Settings">
+            <intent-filter>
+        		<category android:name="android.intent.category.DEFAULT" />
+        	</intent-filter>
+        </activity>
 
     </application>
 
